Delete function created

--- a/src/app/movie-offer/movie-element/movie-element.component.html
+++ b/src/app/movie-offer/movie-element/movie-element.component.html
@@ -5,5 +5,5 @@
     </ion-avatar>
     <ion-label>{{movie.title}}</ion-label>
   </ion-item>
-  <ion-icon name="cart-outline" slot="end" (click)="openAlert($event)"></ion-icon>
+  <ion-icon name="cart-outline" slot="end" (click)="onCart($event)"></ion-icon>
 </ion-item>
