--- a/src/app/movie-offer/movie-explore/movie-explore.page.html
+++ b/src/app/movie-offer/movie-explore/movie-explore.page.html
@@ -22,7 +22,7 @@
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
         <ion-item-option color="secondary">
-          <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+          <ion-icon name="trash-outline" slot="icon-only" (click)="onDeleteMovie(movie.id)" ></ion-icon>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
