Finished 3 transfer pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,13 +22,13 @@
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item>
-            <ion-icon name="heart-outline" slot="start"></ion-icon>
+            <ion-icon routerLink="/favorite-movies" name="heart-outline" slot="start"></ion-icon>
             <ion-label>Favorites</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item>
-            <ion-icon name="eye-outline" slot="start"></ion-icon>
+            <ion-icon routerLink="/watchlist" name="eye-outline" slot="start"></ion-icon>
             <ion-label>Watchlist</ion-label>
           </ion-item>
         </ion-menu-toggle>
