--- a/src/app/movie-offer/movie-explore/movie-details/movie-details.page.html
+++ b/src/app/movie-offer/movie-explore/movie-details/movie-details.page.html
@@ -22,8 +22,8 @@
       <br/>
       <br/>
       <br/>
-      <ion-button color="primary" size="small">Add to favorites</ion-button>
-      <ion-button color="primary" size="small">Add to watchlist</ion-button>
+      <ion-button color="primary" size="small" (click)="onAddFavorites()">Add to favorites</ion-button>
+      <ion-button color="primary" size="small" (click)="onAddWatchlist()">Add to watchlist</ion-button>
 
     </ion-card-content>
   </ion-card>
