--- a/src/app/movie-offer/your-movies/your-movies.page.html
+++ b/src/app/movie-offer/your-movies/your-movies.page.html
@@ -13,15 +13,22 @@
     <app-your-movie-item *ngFor="let movie of yourMovies" [yourMovie]="movie" ></app-your-movie-item>
   </ion-list> -->
 
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <p>This list is empty, please pick movie to reserve on movie offer page!</p>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
   <ion-list lines="none">
-    <app-your-movie-item *ngFor="let movie of yourMovies" [yourMovie]="movie" ></app-your-movie-item>
+    <ion-item-sliding *ngFor="let yourMovie of yourMovies">
+      <app-your-movie-item [yourMovie]="yourMovie" ></app-your-movie-item>
+      <ion-item-options>
+        <ion-item-option color="secondary">
+          <ion-icon name="trash-outline" slot="icon-only" (click)="onDelete(yourMovie.id)"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
 
