--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -28,5 +28,5 @@
     </ion-item>
   </ion-list>
 
-  <app-movie-offer></app-movie-offer>
+  <!-- <app-movie-offer></app-movie-offer> -->
 </ion-content>
