--- a/src/app/movie-offer/movie-explore/movie-explore.page.html
+++ b/src/app/movie-offer/movie-explore/movie-explore.page.html
@@ -14,12 +14,13 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar placeholder="Type movie information" [(ngModel)]="searchTerm" showCancelButton="focus" animated></ion-searchbar>
   <ion-list lines="none">
-    <ion-item-sliding *ngFor="let movie of movies">
+    <ion-item-sliding *ngFor="let movie of movies | filter: searchTerm">
       <app-movie-element [movie]="movie" ></app-movie-element>
       <ion-item-options>
         <ion-item-option color="secondary">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+          <ion-icon name="create-outline" slot="icon-only" (click)="onUpdateMovie(movie)"></ion-icon>
         </ion-item-option>
         <ion-item-option color="secondary">
           <ion-icon name="trash-outline" slot="icon-only" (click)="onDeleteMovie(movie.id)" ></ion-icon>
@@ -27,4 +28,6 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+
 </ion-content>
